[gd_scene load_steps=31 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Add.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font-Italic.otf" type="DynamicFontData" id=3]
[ext_resource path="res://EditItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://ViewNotes.tscn" type="PackedScene" id=5]
[ext_resource path="res://Splash.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Menu.png" type="Texture" id=7]
[ext_resource path="res://Sidebar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Font-Regular.otf" type="DynamicFontData" id=9]
[ext_resource path="res://EditList.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sort.png" type="Texture" id=11]
[ext_resource path="res://SortMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Filter.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sweep.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.25098 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 1, 0, 0 )

[sub_resource type="DynamicFont" id=16]
size = 44
font_data = ExtResource( 9 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="EmptyWarning" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -80.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "(Empty)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 70.0
theme = SubResource( 6 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vertical" type="VBoxContainer" parent="List"]
custom_constants/separation = 10

[node name="Add" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -80.0
margin_right = -20.0
margin_bottom = -20.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Add"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SortMenu" parent="TopBar" instance=ExtResource( 12 )]

[node name="Background" type="ColorRect" parent="TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -3.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="TopBar"]
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 62.0
margin_bottom = -8.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="TopBar/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListName" type="Label" parent="TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 68.0
margin_right = -68.0
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
text = "List Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="Button" parent="TopBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -8.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="TopBar/Sweep"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sort" type="Button" parent="TopBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 5.0
margin_right = -67.0
margin_bottom = -8.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="TopBar/Sort"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="Button" parent="TopBar"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 5.0
margin_right = -67.0
margin_bottom = -8.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="TopBar/Filter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="TopBar"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewNotes" parent="." instance=ExtResource( 5 )]

[node name="EditItem" parent="." instance=ExtResource( 4 )]

[node name="Sidebar" parent="." instance=ExtResource( 8 )]

[node name="EditList" parent="." instance=ExtResource( 10 )]

[node name="Splash" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="Add" to="." method="openAddItemMenu"]
[connection signal="sortChanged" from="TopBar/SortMenu" to="." method="sortMethodChanged"]
[connection signal="pressed" from="TopBar/Menu" to="Sidebar" method="open"]
[connection signal="pressed" from="TopBar/Sweep" to="." method="sweep"]
[connection signal="pressed" from="TopBar/Sort" to="TopBar/SortMenu" method="toggle"]
[connection signal="editItem" from="ViewNotes" to="." method="openEditItemMenu"]
[connection signal="deleteItem" from="EditItem" to="." method="deleteItem"]
[connection signal="editItem" from="EditItem" to="." method="editItem"]
[connection signal="addList" from="Sidebar" to="." method="openAddListMenu"]
[connection signal="deleteList" from="EditList" to="." method="deleteList"]
[connection signal="editList" from="EditList" to="." method="editList"]
